--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
       content="width=device-width, user-scalable-no, initial-scale=1.0, maximum-scale-1.0, minimum-scale-1.0"
     />
     <meta name="author" content="Haunter88" />
-    <meta name="description" content="Lo mejor del anime" />
+    <meta name="description" content="Tokio" />
     <meta name="keywords" content="anime, shonen, isekai, accion, epico" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="/favicon.ico.png" type="image/x-icon" />
