--- a/contacto.html
+++ b/contacto.html
@@ -260,7 +260,7 @@
             </p>
             <p>
               <label for="motivo">Motivo del contacto</label>
-              <select name="motivo" id="motivo">
+              <select value="motivo" id="motivo">
                 <option value="Remera">Remera de Tokio Ra</option>
                 <option value="Gorra">Gorra de Tokio Ra</option>
                 <option value="Producto">Producto a pedido</option>
@@ -270,7 +270,7 @@
             </p>
             <p class="block">
               <label for="mensaje">Comentarios</label>
-              <textarea name="mensaje" id="mensaje" rows="4"></textarea>
+              <textarea name="mensaje" value="mensaje" id="mensaje" rows="4"></textarea>
             </p>
             <p class="block">
               <button type="submit">Enviar</button>
