--- a/contacto.html
+++ b/contacto.html
@@ -241,7 +241,7 @@
       <div class="contacto">
         <div class="contacto-form">
           <h3 class="encab">Contacto</h3>
-          <form name="contact" data-netlify="true" method="POST">
+          <form name="contact" netlify>
             <p>
               <label for="nombre">Nombre </label>
               <input type="text" name="nombre" id="nombre" required />
