--- a/contacto.html
+++ b/contacto.html
@@ -241,7 +241,7 @@
       <div class="contacto">
         <div class="contacto-form">
           <h3 class="encab">Contacto</h3>
-          <form name="contact" enctype="multipart/form-data" method="POST" netlify>
+          <form name="contact" enctype="multipart/form-data" method="POST" data-netlify="true">
             <p>
               <label for="nombre">Nombre 
               <input type="text" name="nombre" id="nombre" required /></label>
